--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(253, 84, 177);
+    background-color: rgb(255, 255, 255);
     outline: none;
  }
 
@@ -12,25 +12,23 @@
     justify-content: center;
     align-items: center;
  }
-
  .calculator{
-    background-color:rgb(255, 23, 150);
+    background-color:rgb(23, 170, 255);
     padding: 15px;
     border-radius: 30px;
-    box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(53, 0, 29);
+    box-shadow:inset 0 0 15px -2px rgb(1, 45, 82);
     display: grid;
     grid-template-columns: repeat(4, 68px);
  }
-
  input{
     grid-column: span 4;
     height: 70px;
     width: 260px;
-    background-color:  rgb(253, 84, 177);
-    box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(53, 0, 29);
+    background-color:  rgb(244, 249, 255);
+    box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(0, 45, 112);
     border: none;
     border-radius: 10px;
-    color: rgb(70,70,70);
+    color: rgb(0, 45, 112);
     font-size: 50px;
     text-align: end;
     margin: auto;
@@ -41,18 +39,21 @@
 button{
     height: 48px;
     width: 48px;
-    background-color:rgb(253, 84, 177) ;
-    box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(53, 0, 29);
+    background-color:rgb(84, 163, 253);
+    box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(0, 45, 112);
     border: none;
     border-radius: 15px;
     margin: 8px;
     font-size: 16px;
 }
+button:hover{
+    background-color: rgb(255, 255, 255);
+ }
 .equal{
     width: 115px;
     border-radius: 15px;
-    background-color: rgb(253, 84, 177);
-        box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(53, 0, 29);
+    background-color: rgb(255, 255, 255);
+        box-shadow: inset 5px 5px 12px white,5px 5px 12px rgb(0, 45, 112);
 
 }
 
