--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ button:hover{
     box-shadow: inset 5px 5px 12px  rgb(255, 94, 0),5px 5px 12px rgb(0, 45, 112);
 
 }
+.equal:hover{
+   background-color: rgb(255, 94, 0);
+}
 
 
 
